fixed overflow on season

--- a/static/src/assets/scss/views/_season.scss
+++ b/static/src/assets/scss/views/_season.scss
@@ -113,7 +113,6 @@
 
 .season-entry-title {
 	width: calc(100% / 5 * 4);
-	overflow-x: hidden;
 	p {
 		word-break: break-word;
 	}
